--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,10 @@ requests==2.22.0
 requests-toolbelt==0.9.1
 retrying==1.3.3
 rfc3986==1.4.0
+seclea-utils==0.0.27
 SecretStorage==3.3.1
 six==1.14.0
+toml==0.10.2
 tqdm==4.59.0
 twine==3.3.0
 urllib3==1.25.8
