--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 pkginfo==1.7.0
+pre-commit==2.12.1
 progress==1.5
 pycparser==2.20
 Pygments==2.8.1
@@ -31,7 +32,7 @@ requests==2.22.0
 requests-toolbelt==0.9.1
 retrying==1.3.3
 rfc3986==1.4.0
-seclea-utils==0.0.27
+seclea-utils==0.0.30
 SecretStorage==3.3.1
 six==1.14.0
 toml==0.10.2
@@ -39,5 +40,6 @@ tqdm==4.59.0
 twine==3.3.0
 urllib3==1.25.8
 webencodings==0.5.1
+wheel==0.36.2
 zipp==3.4.1
 zstandard==0.15.2
