--- a/.isort.cfg
+++ b/.isort.cfg
@@ -5,4 +5,4 @@ multi_line_output = 3
 include_trailing_comma = True
 use_parentheses = True
 force_grid_wrap = 0
-known_third_party =seclea_utils
+known_third_party =seclea_utils,upload
