--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r seclea_utils/requirements.txt
+        pip install -r seclea_ai/requirements.txt
     - name: Run Tests
       run: |
         python -m unittest discover testing
