--- a/requirements.txt
+++ b/requirements.txt
@@ -82,11 +82,13 @@ QtPy==1.9.0
 readme-renderer==29.0
 requests==2.22.0
 requests-toolbelt==0.9.1
+responses~=0.13.3
 retrying==1.3.3
 rfc3986==1.4.0
 seclea-utils==0.0.37
 SecretStorage==3.3.1
 Send2Trash==1.5.0
+setuptools~=49.2.1
 six==1.14.0
 terminado==0.10.0
 testpath==0.5.0
