--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r seclea_ai/requirements.txt
+        pip install -r requirements.txt
+    - name: Run pre-commit
+      run: pre-commit run --all-files
     - name: Run Tests
       run: |
-        python -m unittest discover testing
+        python -m unittest discover
