--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,11 @@
-appdirs==1.4.3
-appnope==0.1.2
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-bleach==3.3.0
-CacheControl==0.12.6
-certifi==2019.11.28
-cffi==1.14.5
-cfgv==3.2.0
-chardet==3.0.4
-colorama==0.4.3
-contextlib2==0.6.0
-cryptography==3.4.6
-decorator==5.0.9
-defusedxml==0.7.1
-distlib==0.3.0
-distro==1.4.0
-docopt==0.6.2
-docutils==0.16
-entrypoints==0.3
-filelock==3.0.12
-html5lib==1.0.1
-identify==2.2.4
-idna==2.8
-importlib-metadata==3.7.2
-ipaddr==2.2.0
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-jeepney==0.6.0
-Jinja2==3.0.1
-jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-keyring==23.0.0
-lockfile==0.12.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-msgpack==0.6.2
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-nodeenv==1.6.0
-notebook==6.4.0
 numpy==1.20.3
 orjson==3.5.3
-packaging==20.3
 pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.8.2
-pep517==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
 pipreqs==0.4.10
-pkginfo==1.7.0
 pre-commit==2.12.1
-progress==1.5
-prometheus-client==0.11.0
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.8.1
-pyparsing==2.4.6
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytoml==0.1.21
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.1.0
-qtconsole==5.1.0
-QtPy==1.9.0
-readme-renderer==29.0
 requests==2.22.0
-requests-toolbelt==0.9.1
 responses~=0.13.3
-retrying==1.3.3
-rfc3986==1.4.0
+scikit-learn==0.24.2
 seclea-utils==0.0.37
-SecretStorage==3.3.1
-Send2Trash==1.5.0
 setuptools~=49.2.1
-six==1.14.0
-terminado==0.10.0
-testpath==0.5.0
-toml==0.10.2
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-twine==3.3.0
-urllib3==1.25.8
-virtualenv==20.0.25
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-yarg==0.1.9
-zipp==3.4.1
-zstandard==0.15.2
