Make requirements.txt more permissive.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 jupyter==1.0.0
-numpy==1.20.3
-orjson==3.5.3
-pandas==1.2.4
+numpy>=1.19.0
+orjson>=3.5.0
+pandas>=1.2.0
 pipreqs==0.4.10
 pre-commit==2.12.1
-requests==2.22.0
-responses~=0.13.3
-scikit-learn==0.24.2
+requests>=2.22.0
+responses>=0.13.0
+scikit-learn>=0.24.0
 seclea-utils==0.0.37
-setuptools~=49.2.1
+setuptools>=49.2.1
