--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
       - dev
 
 jobs:
-
   build-and-upload:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged
@@ -24,7 +23,7 @@ jobs:
           ./increment-version.sh patch
       - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
-          add: '.'
+          add: "."
           author_email: rogermilroy@users.noreply.github.com
           branch: dev
           # Determines the way the action fills missing author name and email. Three options are available:
@@ -33,14 +32,14 @@ jobs:
           # - github_actions -> github-actions <email associated with the github logo>
           # Default:
           default_author: github_actions
-          message: 'Update version number in setup.py on merge.'
+          message: "Update version number in setup.py on merge."
           # The flag used on the pull strategy. Use NO-PULL to avoid the action pulling at all.
           # Default: '--no-rebase'
-          pull_strategy: 'NO-PULL'
+          pull_strategy: "NO-PULL"
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: "3.8"
       - name: build wheel
         run: |
           pip3 install wheel
