--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Increment version in setup.py
         run: |
           pip3 install bump2version==1.0.1
-          ./increment-version.sh patch
+          ./scripts/increment-version.sh patch
       - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
           add: "."
