--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,16 +3,19 @@ repos:
     rev: 5.9.1
     hooks:
       - id: isort
+        exclude: ^docs/
   - repo: https://github.com/psf/black
     rev: 21.6b0
     hooks:
       - id: black
+        exclude: ^docs/
         language_version: python3.8
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
       - id: check-merge-conflict
       - id: end-of-file-fixer
+        exclude: ^docs/
       - id: requirements-txt-fixer
       - id: mixed-line-ending
         args: [--fix=no]
@@ -28,3 +31,4 @@ repos:
     rev: v2.2.1
     hooks:
       - id: prettier
+        exclude: ^docs/
