--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 jupyter==1.0.0
+lightgbm==3.2.1
 numpy>=1.19.0
 orjson>=3.5.0
 pandas>=1.1.5
@@ -11,3 +12,4 @@ seclea-utils==0.0.39
 setuptools>=49.2.1
 Sphinx==4.1.1
 sphinx-rtd-theme==0.5.2
+xgboost==1.4.2
