--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 jupyter==1.0.0
-lightgbm==3.2.1
 numpy>=1.19.0
-orjson>=3.5.0
 pandas>=1.1.5
 pipreqs==0.4.10
-pre-commit==2.12.1
+pre-commit>=2.12.1
 requests>=2.22.0
 responses>=0.13.0
 scikit-learn>=0.24.0
-seclea-utils==0.0.39
+seclea-utils==0.0.40
 setuptools>=49.2.1
 Sphinx==4.1.1
 sphinx-rtd-theme==0.5.2
-xgboost==1.4.2
+ujson>=4.0.2
