--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,19 +15,29 @@ jobs:
         python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
+      - name: Checkout repo - including submodules
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.TOKEN_AUTOMATION }}
+          submodules: "recursive"
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Run Pre-commit
       - uses: pre-commit/action@v2.0.3
+
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run Tests
         run: |
           python -m unittest discover
