--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Checkout repo - including submodules
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.TOKEN_AUTOMATION }}
           submodules: "recursive"
@@ -32,7 +32,7 @@ jobs:
           ./scripts/run_make_doc.sh
 
       - name: Commit changes to dev.
-      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
+        uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
           add: "."
           author_email: rogermilroy@users.noreply.github.com
