--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Checkout repo - including submodules
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.TOKEN_AUTOMATION }}
           submodules: "recursive"
@@ -27,7 +27,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run Pre-commit
-      - uses: pre-commit/action@v2.0.3
+        uses: pre-commit/action@v2.0.3
 
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
