--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 jupyter==1.0.0
 numpy>=1.19.0
 pandas>=1.1.5
-pickleDB~=0.9.2
+pickleDB>=0.9.2
 pipreqs==0.4.10
 pre-commit>=2.12.1
 requests>=2.22.0
@@ -9,5 +9,5 @@ responses>=0.13.0
 scikit-learn>=0.24.0
 setuptools>=49.2.1
 Sphinx==4.1.1
-sphinx-rtd-theme==0.5.2
+#sphinx-rtd-theme==0.5.2
 ujson>=4.0.2
