--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -37,10 +37,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Run Pre-commit
-        uses: pre-commit/action@v2.0.3
-
+      - uses: pre-commit/action@v2.0.3
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
