--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,7 +5,20 @@ on:
     branches: [main, dev]
 
 jobs:
+  validate:
+    if: ${{ !github.event.pull_request.draft }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo - including submodules
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.TOKEN_AUTOMATION }}
+          submodules: "recursive"
+      - name: Run pre-commit
+        uses: pre-commit/action@v2.0.3
+
   test:
+    needs: validate
     if: ${{ !github.event.pull_request.draft }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -37,16 +50,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: pre-commit/action@v2.0.3
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
-
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Run Tests
         run: |
           python -m unittest discover
