--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+dill>=0.3.4
 jupyter==1.0.0
+lightgbm>=3.3.2
 numpy>=1.19.0
 pandas>=1.1.5
 pickleDB>=0.9.2
@@ -9,5 +11,7 @@ responses>=0.13.0
 scikit-learn>=0.24.0
 setuptools>=49.2.1
 Sphinx==4.1.1
-#sphinx-rtd-theme==0.5.2
+sphinx-rtd-theme==0.5.2
 ujson>=4.0.2
+xgbooost>=1.5.1
+zstandard>=0.16.0
