--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+certifi==2021.5.30
+chardet==3.0.4
 dill>=0.3.4
+idna==2.8
 jupyter==1.0.0
-lightgbm>=3.0.0
+lightgbm==3.2.1
 numpy>=1.19.0
 pandas>=1.1.5
 pickleDB>=0.9.2
@@ -8,10 +11,11 @@ pipreqs==0.4.10
 pre-commit>=2.12.1
 requests>=2.22.0
 responses>=0.13.0
-scikit-learn>=0.24.0
 setuptools>=49.2.1
+sklearn==0.0
 Sphinx==4.1.1
 sphinx-rtd-theme==0.5.2
 ujson>=4.0.2
+urllib3==1.25.11
 xgbooost>=1.4.2
 zstandard>=0.15.1
