Rework CI/CD pipeline.

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,8 +1,8 @@
-name: Python Package Testing
+name: Unit Testing
 
 on:
   pull_request:
-    branches: [main, dev]
+    branches: [dev]
 
 jobs:
   validate:
