--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
 name: Deploy minor version to PyPI
 
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - dev
+  push:
+    tags:
+      - "*"
 
 jobs:
   build-and-upload:
@@ -21,10 +20,13 @@ jobs:
           token: ${{ secrets.TOKEN_AUTOMATION }}
           submodules: "recursive"
 
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: Increment version in setup.py
         run: |
-          pip3 install bump2version==1.0.1
-          ./scripts/increment-version.sh patch
+          ./scripts/update-version.sh ${{ steps.get_version.outputs.VERSION }}
 
       - name: Build Sphinx Documentation
         run: |
@@ -58,8 +60,8 @@ jobs:
           pip3 install wheel
           python3 setup.py bdist_wheel
 
-      - name: Upload wheel
-        run: |
-          pip3 install twine
-          twine upload dist/*
-        continue-on-error: false
+#      - name: Upload wheel
+#        run: |
+#          pip3 install twine
+#          twine upload dist/*
+#        continue-on-error: false
