Add branches to manual run of workflows.

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -3,6 +3,8 @@ name: Integration Testing
 on:
   pull_request:
     branches: [main]
+  workflow_dispatch:
+    branches: [dev, feature/deploy-to-conda]
 
 jobs:
   test:
