--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -3,6 +3,8 @@ name: Unit Testing
 on:
   pull_request:
     branches: [dev]
+  workflow_dispatch:
+    branches: [dev, feature/deploy-to-conda]
 
 jobs:
   validate:
