--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -12,13 +12,12 @@ jobs:
     outputs:
       password: ${{ steps.authenticate.outputs.password }}
     steps:
-      - name: Set auth for AWS
+      - id: authenticate
         run: |
           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_BUILD_USER_ACCESS_KEY }}
           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_BUILD_USER_SECRET_ACCESS_KEY }}
           export AWS_DEFAULT_REGION=eu-west-2
-      - id: authenticate
-        run: echo "::set-output name=password::$(aws ecr get-login-password --region eu-west-2)"
+          echo "::set-output name=password::$(aws ecr get-login-password --region eu-west-2)"
 
   test:
     if: ${{ !github.event.pull_request.draft }}
