--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -34,7 +34,7 @@ jobs:
             path: ~/.cache/pip
 
     services:
-      postgres:
+      postgres-portal:
         image: postgres:13.2
         options: >-
           --health-cmd "pg_isready -q -d postgres -U app_user"
@@ -47,6 +47,20 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
+
+      postgres-auth:
+        image: postgres:13.2
+        options: >-
+          --health-cmd "pg_isready -q -d postgres -U app_user"
+          --health-interval 10s
+          --health-timeout 10s
+          --health-retries 5
+        env:
+          POSTGRES_DB: auth
+          POSTGRES_USER: app_user
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5433
 
       redis:
         image: redis
@@ -77,7 +91,7 @@ jobs:
           SQL_DATABASE: app
           SQL_USER: app_user
           SQL_PASSWORD: postgres
-          SQL_HOST: postgres
+          SQL_HOST: postgres-portal
           SQL_PORT: 5432
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
@@ -85,8 +99,8 @@ jobs:
           API_URL_AUTH: http://localhost:8010
           CORS_ALLOWED_ORIGINS: _json_["http://localhost:8080","http://localhost:8010","http://localhost:8000"]
           CORS_ALLOW_CREDENTIALS: _json_true
-          CELERY_BROKER_URL: "redis://localhost:6379"
-          CELERY_RESULT_BACKEND: "redis://localhost:6379"
+          CELERY_BROKER_URL: "redis://redis:6379"
+          CELERY_RESULT_BACKEND: "redis://redis:6379"
           AUTH_COOKIE_SECURE: _json_false
           AUTH_COOKIE_HTTP_ONLY: _json_false
           AUTH_COOKIE_DOMAIN: " "
@@ -106,16 +120,16 @@ jobs:
           SQL_DATABASE: app
           SQL_USER: app_user
           SQL_PASSWORD: postgres
-          SQL_HOST: postgres
-          SQL_PORT: 5432
+          SQL_HOST: postgres-auth
+          SQL_PORT: 5433
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
           ALLOWED_HOSTS: _json_["*"]
           API_URL_AUTH: http://localhost:8010
           CORS_ALLOWED_ORIGINS: _json_["http://localhost:8080","http://localhost:8010","http://localhost:8000"]
           CORS_ALLOW_CREDENTIALS: _json_true
-          CELERY_BROKER_URL: "redis://localhost:6379"
-          CELERY_RESULT_BACKEND: "redis://localhost:6379"
+          CELERY_BROKER_URL: "redis://redis:6379"
+          CELERY_RESULT_BACKEND: "redis://redis:6379"
           AUTH_COOKIE_SECURE: _json_false
           AUTH_COOKIE_HTTP_ONLY: _json_false
           AUTH_COOKIE_DOMAIN: " "
@@ -148,8 +162,8 @@ jobs:
           API_URL: http://localhost:8010
           CORS_ALLOWED_ORIGINS: _json_["http://localhost:8080","http://localhost:8010","http://localhost:8000"]
           CORS_ALLOW_CREDENTIALS: _json_true
-          CELERY_BROKER_URL: "redis://localhost:6379"
-          CELERY_RESULT_BACKEND: "redis://localhost:6379"
+          CELERY_BROKER_URL: "redis://redis:6379"
+          CELERY_RESULT_BACKEND: "redis://redis:6379"
           ENABLE_PML_FILE_LOGGING: _json_false
           AUTH_COOKIE_SECURE: _json_false
           AUTH_COOKIE_HTTP_ONLY: _json_false
