--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -120,8 +120,8 @@ jobs:
           SQL_DATABASE: app
           SQL_USER: app_user
           SQL_PASSWORD: postgres
-          SQL_HOST: postgres-auth
-          SQL_PORT: 5433
+          SQL_HOST: postgres-portal
+          SQL_PORT: 5432
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
           ALLOWED_HOSTS: _json_["*"]
@@ -152,9 +152,9 @@ jobs:
           SQL_ENGINE: django.db.backends.postgresql
           SQL_DATABASE: auth
           SQL_USER: app_user
-          SQL_PASSWORD: postgres
+          SQL_PASSWORD: postgres-auth
           SQL_HOST: localhost
-          SQL_PORT: 5432
+          SQL_PORT: 5433
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
