--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -39,7 +39,7 @@ jobs:
         options: >-
           --health-cmd "pg_isready -q -d postgres -U app_user"
           --health-interval 10s
-          --health-timeout 10s
+          --health-timeout 5s
           --health-retries 5
         env:
           POSTGRES_DB: app
@@ -53,7 +53,7 @@ jobs:
         options: >-
           --health-cmd "pg_isready -q -d postgres -U app_user"
           --health-interval 10s
-          --health-timeout 10s
+          --health-timeout 5s
           --health-retries 5
         env:
           POSTGRES_DB: auth
@@ -80,9 +80,9 @@ jobs:
           password: ${{ needs.authenticate.outputs.password }}
         options: >-
           --health-cmd "curl localhost:8000"
-          --health-interval 10s
+          --health-interval 5s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 2
         env:
           ENV_ROLE: development
           DEBUG: _json_true
@@ -120,7 +120,7 @@ jobs:
           SQL_DATABASE: app
           SQL_USER: app_user
           SQL_PASSWORD: postgres
-          SQL_HOST: localhost
+          SQL_HOST: postgres-portal
           SQL_PORT: 5432
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
@@ -141,9 +141,9 @@ jobs:
           password: ${{ needs.authenticate.outputs.password }}
         options: >-
           --health-cmd "curl localhost:8010"
-          --health-interval 10s
+          --health-interval 5s
           --health-timeout 5s
-          --health-retries 5
+          --health-retries 2
         env:
           ENV_ROLE: development
           ENVIRONMENT: account_management
@@ -153,7 +153,7 @@ jobs:
           SQL_DATABASE: auth
           SQL_USER: app_user
           SQL_PASSWORD: postgres
-          SQL_HOST: localhost
+          SQL_HOST: postgres-auth
           SQL_PORT: 5433
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
