--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -158,7 +158,7 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           VERIFY_KEY: ${{ secrets.VERIFY_KEY }}
-          ALLOWED_HOSTS: _json_['*']
+          ALLOWED_HOSTS: _json_["*"]
           API_URL: http://localhost:8010
           CORS_ALLOWED_ORIGINS: _json_["http://localhost:8080","http://localhost:8010","http://localhost:8000"]
           CORS_ALLOW_CREDENTIALS: _json_true
