--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -195,7 +195,7 @@ jobs:
           export DJANGO_SUPERUSER_USERNAME="onespanadmin"
           export DJANGO_SUPERUSER_PASSWORD="asdf"
           export DJANGO_SUPERUSER_EMAIL="test@test.tst"
-          docker exec -it auth "python manage.py createsuperuser --no-input"
+          docker exec -it $(docker ps | grep account | cut -d ' ' -f1) sh -c "python manage.py createsuperuser --no-input"
       - name: Run Tests
         run: |
           python -m unittest discover test/test_integration_portal
