--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -192,10 +192,8 @@ jobs:
           pip install -r requirements.txt
       - name: Create user
         run: |
-          export DJANGO_SUPERUSER_USERNAME="onespanadmin"
           export DJANGO_SUPERUSER_PASSWORD="asdf"
-          export DJANGO_SUPERUSER_EMAIL="test@test.tst"
-          docker exec $(docker ps | grep account | cut -d ' ' -f1) sh -c "python manage.py createsuperuser --no-input --username onespanadmin"
+          docker exec $(docker ps | grep account | cut -d ' ' -f1) sh -c "python manage.py createsuperuser --no-input --username onespanadmin --email 'test@test.tst'"
       - name: Run Tests
         run: |
           python -m unittest discover test/test_integration_portal
