Update supported python versions to be 3.7+ rather than 3.6+ in line with 3.6 reaching EOL.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - "*"
   workflow_dispatch:
-    branches: [dev, feature/deploy-to-conda]
+    branches: [dev]
 
 jobs:
   build-and-upload:
