Don't run integration tests on PR to main until they are working.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,8 @@ jobs:
         run: |
           pip3 install wheel
           python3 setup.py bdist_wheel
+          ls dist
+          ls build
 
 #      - name: Upload wheel
 #        run: |
