Add back upload to pypi.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,11 +60,9 @@ jobs:
         run: |
           pip3 install wheel
           python3 setup.py bdist_wheel
-          ls dist
-          ls build
 
-#      - name: Upload wheel
-#        run: |
-#          pip3 install twine
-#          twine upload dist/*
-#        continue-on-error: false
+      - name: Upload wheel
+        run: |
+          pip3 install twine
+          twine upload dist/*
+        continue-on-error: false
