--- a/.do/app.yml
+++ b/.do/app.yml
@@ -3,7 +3,7 @@ region: ams
 static_sites:
   - environment_slug: html
     github:
-      branch: dev
+      branch: main
       deploy_on_push: true
       repo: seclea/seclea_ai
     name: seclea-ai
