--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build-and-upload:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     env:
       TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
