--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,6 @@ jobs:
           message: "Update version number in setup.py."
           # The flag used on the pull strategy. Use NO-PULL to avoid the action pulling at all.
           # Default: '--no-rebase'
-          tag: ${{ github.event.inputs.tag }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -81,7 +80,7 @@ jobs:
       - name: Build wheel
         run: |
           pip3 install wheel
-          python3 setup.py bdist_wheel
+          python3 setup.py bdist_wheel sdist
 
       - name: Upload wheel
         run: |
