--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
           message: "Update version number in setup.py."
           # The flag used on the pull strategy. Use NO-PULL to avoid the action pulling at all.
           # Default: '--no-rebase'
+          tag: ${{ github.event.inputs.tag }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
