--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build Sphinx Documentation
         run: |
-          pip3 install -r requirements.txt
+          pip3 install sphinx sphinx-rtd-theme myst_parser numpy
           ./scripts/run_make_doc.sh
 
       - name: Commit changes to main.
