--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -14,6 +14,6 @@ responses>=0.13.0
 scikit-learn>=0.24.2
 setuptools>=49.2.1
 Sphinx==4.3.0
-urllib3==1.25.11
+urllib3>=1.26.5
 xgboost>=1.5.1
 zstandard>=0.15.1
