Update pre-commit config to ingnore docs/build for mixed line endings - incorrectly flagging binary files.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
         exclude: ^docs/
       - id: requirements-txt-fixer
       - id: mixed-line-ending
+        exclude: ^docs/build/
         args: [--fix=no]
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
