--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
 
       - name: Build Sphinx Documentation
         run: |
-          pip3 install sphinx sphinx-rtd-theme myst_parser numpy pandas
-          ./scripts/run_make_doc.sh
+          sudo apt install -y pandoc
+          pip3 install -r requirements.txt
+          ./scripts/make_doc_site.sh
 
       - name: Commit changes to dev.
         uses: EndBug/add-and-commit@v9 # You can change this to use a specific version
