--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ imbalanced_learn>=0.9.0
 jupyter==1.0.0
 lightgbm==3.2.1
 myst_parser>=0.17.0
+nbsphinx==0.8.8
 numpy>=1.19.0
 pandas>=1.1.5
 pickleDB>=0.9.2
