--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pickleDB>=0.9.2
 pre-commit>=2.19.0
 requests>=2.22.0
 responses>=0.13.0
-scikit-learn>-0.24.2
+scikit-learn==1.0.2
 setuptools>=49.2.1
 Sphinx==4.3.0
 sphinx-rtd-theme==1.0.0
