--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -11,7 +11,7 @@ pickleDB>=0.9.2
 pre-commit>=2.19.0
 requests>=2.22.0
 responses>=0.13.0
-scikit-learn>=0.24.2
+scikit-learn==1.0.2
 setuptools>=49.2.1
 Sphinx==4.5.0
 urllib3>=1.26.5
