--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ nbsphinx==0.8.8
 numpy>=1.19.0
 pandas>=1.1.5
 pickleDB>=0.9.2
+pillow>=9.1.0
 pre-commit>=2.19.0
 requests>=2.22.0
 responses>=0.13.0
