--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: black
         language_version: python3.8
+        exclude: ^docs/
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.2.0
     hooks:
@@ -12,6 +13,7 @@ repos:
       - id: requirements-txt-fixer
       - id: mixed-line-ending
         args: [--fix=no]
+        exclude: ^docs/
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
@@ -24,3 +26,4 @@ repos:
     rev: v2.6.2
     hooks:
       - id: prettier
+        exclude: ^docs/
