--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     hooks:
       - id: check-merge-conflict
       - id: end-of-file-fixer
+        exclude: ^docs/
       - id: requirements-txt-fixer
       - id: mixed-line-ending
         args: [--fix=no]
