--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ scikit-learn<=1.0.2
 setuptools>=49.2.1
 Sphinx==4.3.0
 sphinx-rtd-theme==1.0.0
+tensorflow>=2.0.0
 urllib3>=1.26.5
 xgboost>=1.5.1
 zstandard>=0.15.1
