--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -16,6 +16,7 @@ responses>=0.13.0
 scikit-learn==1.1.0
 setuptools>=49.2.1
 Sphinx==4.5.0
+tensorflow>=2.0.0
 urllib3>=1.26.5
 xgboost>=1.5.1
 zstandard>=0.15.1
