--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ numpy>=1.19.0
 pandas>=1.1.5
 peewee==3.14.10
 pillow>=9.1.0
-pre-commit>=2.19.0
+pre-commit>=2.20.0
+pyyaml>=6.0
 requests>=2.22.0
 responses>=0.13.0
 scikit-learn<=1.0.2
