--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ myst_parser>=0.17.0
 nbsphinx==0.8.8
 numpy>=1.19.0
 pandas>=1.1.5
+pickleDB>=0.9.2
 pillow>=9.1.0
 pre-commit>=2.19.0
 requests>=2.22.0
@@ -18,7 +19,6 @@ scikit-learn<=1.0.2
 setuptools>=49.2.1
 Sphinx==4.3.0
 sphinx-rtd-theme==1.0.0
-sqlitedict==2.0.0
 tensorflow>=2.0.0
 urllib3>=1.26.5
 xgboost>=1.5.1
