--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -8,6 +8,7 @@ lightgbm==3.2.1
 nbsphinx==0.8.8
 numpy>=1.19.0
 pandas>=1.1.5
+pickleDB>=0.9.2
 pillow>=9.1.0
 pre-commit>=2.19.0
 requests>=2.22.0
@@ -15,7 +16,6 @@ responses>=0.13.0
 scikit-learn==1.1.0
 setuptools>=49.2.1
 Sphinx==4.5.0
-sqlitedict==2.0.0
 tensorflow>=2.0.0
 urllib3>=1.26.5
 xgboost>=1.5.1
