--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3>=1.22.0
 certifi==2021.5.30
 chardet==3.0.4
 circuitbreaker==1.4.0
+decorator>=5.1.1
 dill>=0.3.4
 idna>=2.9
 imbalanced_learn<=0.9.1
@@ -14,6 +15,7 @@ pandas>=1.1.5
 peewee==3.14.10
 pillow>=9.1.0
 pre-commit>=2.20.0
+pympler>=1.0.1
 pyyaml>=6.0
 requests>=2.22.0
 responses>=0.13.0
@@ -23,5 +25,6 @@ Sphinx==4.3.0
 sphinx-rtd-theme==1.0.0
 tensorflow>=2.0.0
 urllib3>=1.26.5
+wrapt>=1.14.1
 xgboost>=1.5.1
 zstandard>=0.15.1
