Remove doc building requirements and move to deploy.yml. Fix bug in tutorial.rst

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Sphinx Documentation
         run: |
           sudo apt install -y pandoc
-          pip3 install -r requirements.txt
+          pip3 install sphinx sphinx-rtd-theme nbsphinx myst_parser
           ./scripts/make_doc_site.sh
 
       - name: Commit changes to main.
