--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -1,6 +1,7 @@
 boto3>=1.22.0
 certifi==2021.5.30
 chardet==3.0.4
+decorator
 dill>=0.3.4
 idna>=2.9
 jupyter==1.0.0
@@ -16,5 +17,5 @@ scikit-learn==1.1.0
 setuptools>=49.2.1
 tensorflow>=2.0.0
 urllib3>=1.26.5
+wrapt
 xgboost>=1.5.1
-zstandard>=0.15.1
