--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -189,10 +189,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry env use python3.10
+          poetry install
       - name: Create user
         run: |
           docker exec $(docker ps | grep account | cut -d ' ' -f1) bash scripts/load_default_data.sh
       - name: Run Tests
         run: |
-          python -m unittest discover test/test_integration_portal
+          poetry run python3 -m unittest discover test/test_integration_portal
