--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ version = "0.1.0"
 description = ""
 authors = ["occy88 <octavio.delser@gmail.com>"]
 readme = "README.md"
-packages = [{include = "seclea_ai"}]
+packages = [{ include = "seclea_ai" }]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
@@ -33,7 +33,6 @@ dill = "^0.3.6"
 idna = "^3.4"
 imbalanced-learn = "^0.9.1"
 jupyter = "^1.0.0"
-lightgbm = "^3.3.3"
 numpy = "^1.23.5"
 pandas = "^1.5.2"
 pickledb = "^0.9.2"
@@ -43,12 +42,17 @@ requests = "^2.28.1"
 responses = "^0.22.0"
 scikit-learn = "^1.1.3"
 setuptools = "^65.6.3"
-tensorflow = "^2.11.0"
+tensorflow = { version = "2.10.0", platform = "linux" }
+tensorflow-macos = { version = "^2.10.0", platform = "darwin" }
+lightgbm = [{ version = "3.3.3", markers = "sys_platform!='darwin'" }]
 urllib3 = "^1.26.13"
 wrapt = "^1.14.1"
 xgboost = "^1.7.1"
 pytest = "^7.2.0"
-
+torch = [{ version = "^1.13.0", markers = "sys_platform !='darwin'" },
+    { version = "1.12.1", markers = "sys_platform =='darwin'" }]
+torchray = [{ version = "^1.0.0.2", markers = "sys_platform !='darwin'" },
+    { version = "1.0.0.1", markers = "sys_platform =='darwin'" }]
 
 [build-system]
 requires = ["poetry-core"]
