--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ scikit-learn = "^1.1.3"
 setuptools = "^65.6.3"
 tensorflow = { version = "2.10.0", platform = "linux" }
 tensorflow-macos = { version = "^2.10.0", platform = "darwin" }
-lightgbm = [{ version = "3.3.3", markers = "sys_platform!='darwin'" }]
+lightgbm = "3.3.2"
 urllib3 = "^1.26.13"
 wrapt = "^1.14.1"
 xgboost = "^1.7.1"
