--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -53,4 +53,5 @@ jobs:
         uses: abatilo/actions-poetry@v2
       - name: Run Tests
         run: |
+          poetry install
           poetry run python3 -m unittest discover
