added petry env ativation in workflow for windows

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -54,4 +54,5 @@ jobs:
       - name: Run Tests
         run: |
           poetry install
+          poetry env use python${{matrix.python-version}}
           poetry run python3 -m unittest discover
