windows env being stupid

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -55,8 +55,9 @@ jobs:
       - name: Activate poetry env
         run: |
           echo "========== [ env activation ]=============="
+          python3 --version
           echo python${{matrix.python-version}}
-          poetry env use python${{matrix.python-version}}
+          poetry env use python3
       - name: Install deps
         run: |
           poetry install
