--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,8 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:deadsnakes/ppa
 RUN apt-get install -y python3.9-dev
 RUN apt-get install -y python3.9-venv
 RUN apt-get install -y python3-pip
