--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,68 +2,34 @@
 # BUILDER #
 ###########
 
-FROM ubuntu:22.04 AS builder
+FROM tensorflow/tensorflow:latest
+RUN apt-get update
+RUN apt-get install -y gcc libpq-dev
+RUN python3 --version
+RUN apt-get install -y python3.8-venv python3.8-dev python3.8-tk
 
-# set work directory
-WORKDIR /usr/src/app
-
-# set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
 ENV DEBIAN_FRONTEND=noninteractive
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 ARG TZ=Etc/UTC
-# install psycopg2 dependencies
-RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get install -y python3.9-dev
-RUN apt-get install -y python3.9-venv
-RUN apt-get install -y python3-pip
-
-# install dependencies
-ENV  POETRY_VERSION=1.2.2
-RUN pip install "poetry==$POETRY_VERSION"
-RUN python3.9 -m venv /venv
-
-COPY pyproject.toml poetry.lock ./
-
-COPY . .
-RUN . /venv/bin/activate ; poetry env use python3.9; poetry install
-#########
-# FINAL # separated to reduce final size
-#########
-
-FROM ubuntu:22.04
-ENV DEBIAN_FRONTEND=noninteractive
-ARG DEBIAN_FRONTEND=noninteractive
-ENV TZ=Etc/UTC
-ARG TZ=Etc/UTC
+ENV APP_HOME=/home/app/web
+RUN mkdir /home/app
+RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles && mkdir $APP_HOME/media && mkdir $APP_HOME/logging
+WORKDIR $APP_HOME
 # create the app user
 RUN addgroup --system app && adduser --system app --ingroup app
-RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get install -y python3.9 python3.9-dev
-RUN apt-get install -y python3-pip
-RUN apt-get install -y python3.9-venv
-RUN apt-get install -y build-essential
-RUN apt-get install -y  libc6-dev libc6 libssl-dev zlib1g-dev curl gcc-9
-RUN apt-get install -y libc-bin
-RUN rm -rf /home/app/web/seclea_ai/lib/seclea_utils/clib/compiled/*
-
 # create the appropriate directories
-ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-WORKDIR $APP_HOME
+RUN apt-get install -y postgresql
 
-# install nodejs
-COPY --from=builder /venv /venv
+COPY requirements.txt ./
+RUN python3 --version
+RUN python3 -m venv /venv
+RUN . /venv/bin/activate && pip3 install -r requirements.txt
+
 # copy project
 COPY . $APP_HOME
-
-# chown all the files to the app user and build the frontend
 ENV PATH="$/venv/bin:$PATH"
-# change to the app user - security reason
+
+# run entrypoint.sh
 ENTRYPOINT ["/home/app/web/scripts/integration_test.sh"]
